--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
               </div>
               <div
                 class="absolute w-full px-8 overflow-hidden text-center transition-all duration-500 top-64 h-9 group-hover:top-32 group-hover:h-60">
-                <h2 class="text-2xl font-extrabold text-green-800">Coming Soon</h2>
+                <h2 class="text-2xl font-extrabold text-green-800">Custom App</h2>
                 <p class="mt-4 text-base font-normal text-neutral-950">
-                  Fitur baru akan segera hadir! Kami sedang mengembangkan fitur-fitur
-                  menarik untuk membantu Anda mengelola keuangan dengan lebih baik.
-                  Nantikan update terbaru dari kami!
+                  Buat aplikasi Anda sendiri dengan fitur-fitur yang sesuai dengan
+                  kebutuhan. Kami akan membantu Anda membuat aplikasi yang lebih
+                  baik dan lebih efisien.
                 </p>
               </div>
             </div>
