--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                   keputusan bisnis berdasarkan laporan keuangan yang akurat.
                 </p>
                 <a href="https://labarugi.catatankeuangan.my.id"
-                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">Coba
-                  Sekarang</a>
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  Coba Sekarang
+                </a>
               </div>
             </div>
           </div>
@@ -78,8 +79,9 @@
                   setiap transaksi dalam satu tempat.
                 </p>
                 <a href="https://jualbeli.catatankeuangan.my.id"
-                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">Coba
-                  Sekarang</a>
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  Coba Sekarang
+                </a>
               </div>
             </div>
           </div>
@@ -99,6 +101,10 @@
                   kebutuhan. Kami akan membantu Anda membuat aplikasi yang lebih
                   baik dan lebih efisien.
                 </p>
+                <a href="https://wa.me/+6282340247604?text=Hai%2C+saya+ingin+membuat+aplikasi+custom+untuk+kebutuhan+bisnis+saya.+Mohon+bantuannya"
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  Konsultasi Sekarang
+                </a>
               </div>
             </div>
           </div>
