add target blank

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                   keputusan bisnis berdasarkan laporan keuangan yang akurat.
                 </p>
                 <a href="https://labarugi.catatankeuangan.my.id"
-                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90"
+                  target="_blank">
                   Coba Sekarang
                 </a>
               </div>
@@ -79,7 +80,8 @@
                   setiap transaksi dalam satu tempat.
                 </p>
                 <a href="https://jualbeli.catatankeuangan.my.id"
-                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90"
+                  target="_blank">
                   Coba Sekarang
                 </a>
               </div>
@@ -102,7 +104,8 @@
                   baik dan lebih efisien.
                 </p>
                 <a href="https://wa.me/+6282340247604?text=Hai%2C+saya+ingin+membuat+aplikasi+custom+untuk+kebutuhan+bisnis+saya.+Mohon+bantuannya"
-                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90">
+                  class="relative px-6 py-3 text-white bg-green-800 rounded-md top-10 hover:bg-green-800/90"
+                  target="_blank">
                   Konsultasi Sekarang
                 </a>
               </div>
