update page title and meta information

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title> TechCard - Tailwind Card HTML Template</title>
+  <title>Catatan Keuangan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta content="TechCard - Tailwind Card HTML Template, It’s fully responsive and built Tailwind v3"
+  <meta content="atatan Keuangan, Laba Rugi, Jual Beli"
     name="description" />
-  <meta content="Techzaa" name="author" />
+  <meta content="cuinc99" name="author" />
 
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.ico">
