--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Catatan Keuangan</title>
+  <title>Simple - Catatan Keuangan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="atatan Keuangan, Laba Rugi, Jual Beli"
     name="description" />
